Fix SaintVith title align

--- a/saintvith/src/scss/home.scss
+++ b/saintvith/src/scss/home.scss
@@ -33,6 +33,11 @@
   box-shadow: 0 0 30px 0 #b0c4de52;
 }
 
+.section-title,
+.show-hide-banner {
+  display: inherit;
+}
+
 .partenaires {
   background-color: #b0c4de;
   position: relative;
@@ -44,7 +49,7 @@
   text-align: center;
 
   .section-title {
-    text-align: left;
+    text-align: center;
   }
 
   @media (min-width: 992px) {
