--- a/saintvith/src/scss/variables.scss
+++ b/saintvith/src/scss/variables.scss
@@ -44,7 +44,7 @@ $enable-title-uppercase: false !default;
 $home-section-title-size: 2.5rem !default;
 $home-section-title-margin: 0 0 2rem 0 !default;
 $home-section-title-padding: 0 !default;
-$home-section-title-align: left !default;
+$home-section-title-align: center;
 $section-padding-top: 0 !default;
 $to-portal-link-color: #282828 !default;
 $img-placeholder: #f2f2f2 !default;
